Added library for emulating another PSA can box (type 108)

--- a/library.properties
+++ b/library.properties
@@ -1,10 +1,10 @@
 name=Remote library for Junsun Android head unit
-version=1.0
+version=2.0
 author=Peter Pinter <pinterpeti@gmail.com>
 maintainer=Peter Pinter <pinterpeti@gmail.com>
 sentence=A library for communicating with Junsun Android head units
-paragraph=It was created by reverse engineering the protocol between the head unit and the CAN bus adapter created by Raise for PSA cars.
+paragraph=It was created by reverse engineering the protocol between the head unit and the CAN bus adapters created for PSA cars.
 category=Communication
-url=https://github.com/morcibacsi/JunsunPSARemote
-architectures=avr,esp32
-includes=JunsunPSARemote.h
+url=https://github.com/morcibacsi/arduino_tss463_van
+architectures=*
+includes=JunsunPSACANRemote.h,JunsunPSAVANRemote.h
